# vcc

./: .gitignore  .protocol.md.kate-swp  Dockerfile  README.md  compents.json  generate_config.py  main.py  mypy.ini  protocol.md  pubspec.yaml  pyproject.toml  requestments.txt  requirements.txt  setup.cfg  ssh.py  vos.py
.github/: build.yml
.github/workflows/: build.yaml  push_to_ghcr.yaml  upload_to_npm.yml  web.yaml
backend/: .gitignore  main.py  methods.py  requirements.txt  type_generator.py  webpush.py
backend/static/assets/: Chat-e0fa4666.js  Chat-legacy-1e8a2fbb.js  Login-5f5b4330.js  Settings-legacy-4a420fa6.js  SettingsInfo-b2167572.js  SettingsInfo-legacy-332f5ae1.js
client/deno/: mod.ts
client/deno/src/: high-level.ts  high_level.ts  low-level.ts  low_level.ts  mod.ts  uuid.deno.ts  uuid.node.ts
client/deno/vcc/: mod.ts
fluttervcc/: README.md  pubspec.yaml
fluttervcc/.github/workflows/: build.yaml
fluttervcc/lib/: utils.dart  vcc.dart
fluttervcc/windows/: CMakeLists.txt
frontend/: .env  .env.example  .eslintrc.js  .gitignore  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.tauri.mjs  vite.config.ts
frontend/public/: _headers  sw.js
frontend/src/: App.tsx  Form.tsx  Messages.tsx  Notification.tsx  Plugin.tsx  Settings.tsx  Sidebar.tsx  Toolbar.tsx  config.ts  hooks.ts  i18n.ts  index.css  loaders.ts  main.tsx  network.d.ts  network.ts  store.ts  tools.ts  vite-env.d.ts
gateways/: cross_server.py
ios/Runner/: Info.plist
lib/: .vcc.dart.kate-swp  main.dart  utils.dart  vcc.dart
lib/pages/: .chat.dart.kate-swp  .login.dart.kate-swp  chat.dart  login.dart
lib/widgets/: .chatbar.dart.kate-swp  chatbar.dart  dialog.dart  movewindow.dart  vccimage.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner/: Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
res/: supervisord.conf
scripts/: generate_nginx_conf.py  generate_prime.sh
server/: config.json  main.py  requirements.txt
services/: base.py  bot.py  chat.py  db.db  file.py  login.py  migrate.py  models.py  oauth_github.py  record.py
services/migrations/: 001_a.py
test/: widget_test.dart
vcc/: .vcc.py.kate-swp  __init__.py  __main__.py  c.py  protocol.py  rpc.py  s.py  service.py  test.py  tools.py  vcc.py
vcc-bot/: Dockerfile  pyproject.toml
vcc-bot/.github/workflows/: upload_to_npm.yml
vcc-bot/client/deno/: README.md
vcc-bot/client/deno/scripts/: build_npm.ts
vcc-bot/client/deno/src/: low_level.ts  uuid.deno.ts
vcc-bot/server/: main.py
vcc_lib/: .gitignore  LICENCE  __init__.py  pyproject.toml  setup.cfg
vcc_lib/vcc/: tools.py  vcc.py
vcc_rpc/: .gitignore  pyproject.toml
vcc_rpc/server/: main.py
vcc_rpc/services/: base.py  chat.py  friend.py  login.py  migrate.py  models.py  oauth_github.py  record.py
vcc_rpc/services/migrations/: 002_a.py  003_auto.py
vos/: .Dockerfile.kate-swp  Dockerfile  gbk.py  pyproject.toml  ssh.py
web/: index.html  manifest.json
web-vcc/: Dockerfile  README.md  pyproject.toml
web-vcc/.github/workflows/: lint.yml
web-vcc/backend/: methods.py  requirements.txt  type_generator.py  webpush.py
web-vcc/backend/static/assets/: App-3ead29b3.js  App-legacy-8ff5c1a7.js  CreateChat-65b38da0.js  Register-f41907e9.js  Settings-40899cb3.js  index-057a36d6.js  index-71570292.css  polyfills-legacy-dcbb6a41.js
web-vcc/frontend/: .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  index.html  package.json  pnpm-lock.yaml
web-vcc/frontend/public/locales/zh-TW/: translation.json
web-vcc/frontend/src/: App.tsx  config.ts  index.css  loaders.ts  main.tsx  methodtype.ts  network.ts  tools.ts
web-vcc/frontend/src-tauri/: Cargo.toml  tauri.conf.json
web-vcc/frontend/src-tauri/icons/: icon.icns
web-vcc/frontend/src/components/: ChooseBackend.tsx  Messages.tsx  Notification.tsx  Plugin.tsx  Sidebar.tsx  SidebarMenu.tsx  Toolbar.tsx
web-vcc/frontend/src/pages/: Chat.tsx  ChooseBackend.tsx  ErrorElement.tsx  Invite.tsx  Login.tsx  Register.tsx  Settings.tsx  SettingsActions.tsx
web-vcc/frontend/src/state/: alert.ts  chat.ts  login.ts  message.ts  network.ts  plugin.ts
web-vcc/scripts/: generate_nginx_conf.py
windows/runner/: Runner.rc  main.cpp
(+51 files in other folders)
