[tool.poetry]
name = "vcc_lib"
version = "0.3.6"
description = "vcc base library"
authors = ["Calvinlin","3swordman"]
license = "MIT"

packages = [
    { include = "vcc" }
]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
