[tool.poetry]
name = "web-vcc"
version = "0.1.0"
description = "Web frontend of vcc"
authors = ["Calvinlin","3swordman"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
redis= "^5.0.1"
types-redis = "4.3.21.6"
multidict = "6.0.4"
sanic = "^23.6.0"
limits = "^3.6.0"
pyjwt = "2.6.0"
py-vapid = "1.9.0"
pywebpush = "1.14.0"
json-rpc = "1.15.0"
vcc_lib = {path = "../vcc_lib", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
