[package]
name = "web-vcc"
version = "0.1.0"
description = "web-vcc: a new way for chat"
authors = ["3swordman", "calvinlin"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/vcc-chat/web-vcc.git"
default-run = "web-vcc"
edition = "2021"
rust-version = "1.59"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
opt-level = 3
strip = true
